--- a/.pylintrc
+++ b/.pylintrc
@@ -1,5 +1,5 @@
 [MASTER]
-load-plugins=pylint_django
+load-plugins=pylint_django,pylint_quotes
 ignore=migrations,node_modules,venv,.venv,frontend,staticroot,scripts
 max-line-length=200
 include-naming-hint=y
@@ -23,3 +23,10 @@ disable=
     too-many-locals,
     too-many-statements,
     unsubscriptable-object, # https://github.com/PyCQA/pylint/issues/1498
+
+[VARIABLES]
+
+[pylint-quotes]
+string-quote=single-avoid-escape
+triple-quote=double
+docstring-quote=double
