Change files to correct project in pylint command

--- a/.github/workflows/django.yml
+++ b/.github/workflows/django.yml
@@ -41,7 +41,7 @@ jobs:
           python -m pipenv install --python $PY
       
       - name: Run pylint
-        run: python -m pipenv run pylint accounts nbb plakat rekenett root 
+        run: python -m pipenv run pylint infoscreen root 
 
       - name: Verify migrations
         run: |
