--- a/.pylintrc
+++ b/.pylintrc
@@ -23,6 +23,7 @@ disable=
     too-many-locals,
     too-many-statements,
     unsubscriptable-object, # https://github.com/PyCQA/pylint/issues/1498
+    fixme,
 
 [VARIABLES]
 
