--- a/.pylintrc
+++ b/.pylintrc
@@ -28,7 +28,7 @@ disable=
     too-many-statements,
     unsubscriptable-object, # https://github.com/PyCQA/pylint/issues/1498
     fixme,
-    django-not-configured, # django-settings-module=root.settings doesn't work
+    ; django-not-configured, # django-settings-module=root.settings doesn't work
 
 [VARIABLES]
 
