--- a/.github/workflows/django.yml
+++ b/.github/workflows/django.yml
@@ -18,6 +18,7 @@ env:
   DJANGO_SUPERUSER_USERNAME: admin
   DJANGO_SUPERUSER_PASSWORD: Django123
   DJANGO_SUPERUSER_EMAIL: admin@example.com
+  DJANGO_SETTINGS_MODULE: root.settings
 
 jobs:
   job_build_django:
