--- a/.github/workflows/django.yml
+++ b/.github/workflows/django.yml
@@ -41,6 +41,7 @@ jobs:
           python -m pipenv install --python $PY
 
       - name: Run pylint
+        run: python -m pipenv manage.py migrate
         run: python -m pipenv run pylint infoscreen root
 
       - name: Verify migrations
