--- a/.gitignore
+++ b/.gitignore
@@ -9,8 +9,8 @@ staticroot
 
 __pycache__
 
-info_screens.log
-info_screens.log.swp
+.info_screens.log
+.info_screens.log.swp
 
 ### VisualStudioCode ###
 .vscode/**/*
