remove pylint from django.yml

--- a/.github/workflows/django.yml
+++ b/.github/workflows/django.yml
@@ -45,8 +45,8 @@ jobs:
           python -m pipenv run python manage.py makemigrations
           python -m pipenv run python manage.py migrate
 
-      - name: Run pylint
-        run: python -m pipenv run pylint infoscreen root
+      # - name: Run pylint
+      #   run: python -m pipenv run pylint infoscreen root
 
       - name: Run tests
         run: python -m pipenv run pytest
